# H_and_M_Recommendation

./: EDA.ipynb  README.md  main.py  pyproject.toml  recommend.ipynb
input/images/: Screenshot1.jpf  Screenshot2.jpf  Screenshot3.jpf
output/: pairs.pkl  top12.npy
