[tool.poetry]
name = "handm"
version = "0.1.0"
description = ""
authors = ["Richard <getrt1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
seaborn = "^0.12.2"
tqdm = "^4.66.1"
ipykernel = "^6.25.1"
streamlit = "^1.26.0"
requests = "^2.31.0"
multiprocess = "^0.70.15"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
